adicionados controles para tipos e ambiente, finalizando segunda pagina

--- a/rpg_room_back/package.json
+++ b/rpg_room_back/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:seed": "knex --knexfile knexfile.ts seed:run",
     "start": "nodemon src/server.ts"
   },
   "keywords": [],
